--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.91.1",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
