--- a/supabase/functions/enviar-lembretes/.npmrc
+++ b/supabase/functions/enviar-lembretes/.npmrc
@@ -1,3 +1,3 @@
-# Configuration for private npm package dependencies
-# For more information on using private registries with Edge Functions, see:
-# https://supabase.com/docs/guides/functions/import-maps#importing-from-private-registries
+VITE_SUPABASE_URL = http://127.0.0.1:54323   
+
+VIRRE_SUPABASE_ANON_KEY = sb_publishable_ACJWlzQHlZjBrEguHvfOxg_3BJgxAaH
